# bank-in-a-phone

./: .deploy.sh.swp  Cargo.toml  README.md  build-debug.sh  build.sh  deploy-debug.sh  deploy.sh  immutable-bank.service  package-lock.json  package.json  release-debug.sh  release.sh  remote.sh
.github/workflows/: azure-static-web-apps-nice-bush-08061f510.yml  pages.yml
assets/: sw.js
crates/backend/: Cargo.toml
crates/backend/src/: broadcast.rs  general_state.rs  html_handler.rs  http_handler.rs  http_server.rs  logger.rs  main.rs  opts.rs  process.rs  ws_handler.rs
crates/backend/src/handlers/: get.rs  http.rs  mod.rs  options.rs  post.rs  ws.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: main.rs
crates/model/: Cargo.toml
crates/model/src/: account.rs  bank.rs  bank_id.rs  base64_array.rs  header.rs  ledger.rs  ledger_entry.rs  ledger_type.rs  lib.rs  password_hash.rs  pretty.rs  secret.rs  signature.rs  transaction.rs
crates/model/src/logic/: add.rs  copy_bank.rs  mod.rs  new_bank.rs  new_entry.rs  save_bank.rs  transfer.rs  update_bank.rs
crates/model/src/requests/: copy_bank.rs  mod.rs  new_bank.rs  transfer.rs  update_bank.rs
crates/model/src/responses/: copy_bank.rs  create_bank.rs  mod.rs  transfer.rs  update_bank.rs
crates/web/: Cargo.toml  index.html
crates/web/assets/: sw.js
crates/web/src/: app.rs  init.rs  lib.rs  main.rs  reqwest.rs  sleep.rs  ws.rs
crates/web/src/process/: login_bank.rs  mod.rs  new_bank.rs  poll.rs  replay.rs  start_ledge.rs  transfer.rs  try_finish_entry.rs
crates/web/src/render/: bank_summary.rs  create.rs  dialog.rs  login.rs  mod.rs  move_money.rs  pending.rs  play.rs  send_money.rs
crates/web/src/sound/: mod.rs  play.rs
crates/web/src/state/: account.rs  bank.rs  local_app.rs  mod.rs  process.rs  save_state.rs  transaction.rs
src/: main.rs
