[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
keywords = ["bank", "immutable", "webassembly"]
repository = "https://github.com/john-sharratt/bank-in-a-phone"
publish = false
version = "0.1.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
egui = { version = "0.26.0" }
eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
env_logger = { version = "0.10" }
wasm-bindgen-futures = { version = "0.4" }
anyhow = { version = "1.0.80" }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
