[package]
name = "immutable-bank-model"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha256 = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
