[package]
name = "immutable-bank-web"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
immutable-bank-model = { workspace = true }
futures = { workspace = true }
pharos = { workspace = true }
rand = { workspace = true }
bincode.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
ws_stream_wasm = { workspace = true }
wasm-bindgen = { workspace = true }
